--- a/package.json
+++ b/package.json
@@ -5,36 +5,28 @@
   "description": "Static HTML based RESUME made with next.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env DEBUG=yosume:* NODE_OPTIONS=--openssl-legacy-provider next",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
-    "prebuild": "npm install && npm run lint",
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start",
-    "export:with-typedoc": "npm run export && npm run typedoc",
-    "export": "cross-env NODE_ENV=production next export --outdir docs/",
-    "preexport": "npm run clean && npm run build",
-    "postexport": "node shellwork.js",
-    "clean": "npx rimraf docs .next",
-    "typedoc": "typedoc --excludeExternals"
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start"
   },
-  "homepage": "https://uyu423.github.io/resume-nextjs",
+  "homepage": "https://work.leegyuwon.site",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uyu423/resume-nextjs.git"
+    "url": "git+https://github.com/291e/resume-nextjs.git"
   },
   "keywords": [
     "resume",
     "next"
   ],
   "author": {
-    "name": "Yowu Yu",
-    "email": "me@yowu.dev",
-    "url": "https://yowu.dev"
+    "name": "LeeGyuwon",
+    "email": "yko03211@gmail.com",
+    "url": "https://github.com/291e"
   },
   "contributors": [],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/uyu423/resume-nextjs/issues"
+    "url": "https://github.com/291e/resume-nextjs/issues"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
